# kmeansCL

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cc
lib/: CMakeLists.txt
lib/include/: kmeanscl.h
lib/src/: kmeanscl.cc
tests/: CMakeLists.txt  main.cc
